--- a/node26.html
+++ b/node26.html
@@ -294,7 +294,11 @@ que se corresponde con esta parentización: <code>a = (4 - (2 - 1))</code>
 <P>
 
 <FONT COLOR="#ff0000"> Este árbol no se corresponde con la asociatividad a izquierdas  del operador</FONT>
-<code>-</code>. Es un árbol que refleja una asociación a derechas (<code>a = 3</code>).
+<code>-</code>. Es un árbol que refleja una asociación a derechas produciendo 
+como resultado <code>a = 3</code>.
+
+<P>
+Solución:
 
 <P>
 Un lenguaje generado por una gramática recursiva por la izquierda 
