--- a/node26.html
+++ b/node26.html
@@ -119,7 +119,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04260000000000000000"></A>
-   <A NAME="4864"></A>
+   <A NAME="4868"></A>
   
 <A NAME="practica:pl0"></A>
 <BR>
@@ -214,6 +214,11 @@ program = block "." .
 correcta para las diferencias y las divisiones</FONT>. 
 
 <P>
+
+<UL>
+<LI><B>El Problema</B>
+
+<P>
 Supongamos que añadimos el operador <code>-</code> al código de nuestra práctica. 
 
 <P>
@@ -298,7 +303,8 @@ que se corresponde con esta parentización: <code>a = (4 - (2 - 1))</code>
 como resultado <code>a = 3</code>.
 
 <P>
-Solución:
+</LI>
+<LI><B>Solución</B>
 
 <P>
 Un lenguaje generado por una gramática recursiva por la izquierda 
@@ -380,6 +386,8 @@ Aquí el token <code>ADDOP</code> esta por las dos operaciones aditivas:
     ADDOP: /[+-]/g
     ONECHAROPERATORS: /([*\/=()&amp;|;:,{}[\]])/g
 </PRE>
+</LI>
+</UL>
 </LI>
 <LI>No es necesario que el lenguaje sea 
 <FONT COLOR="#ff0000"> exactamente igual</FONT> pero debería 
