--- a/node26.html
+++ b/node26.html
@@ -119,7 +119,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04260000000000000000"></A>
-   <A NAME="4868"></A>
+   <A NAME="4871"></A>
   
 <A NAME="practica:pl0"></A>
 <BR>
@@ -248,7 +248,8 @@ de producción como esta:
 <BR>
 
 <P>
-Al poner <code>expression</code> a la derecha evitamos la temida recursión infinita 
+Al poner <code>expression</code> a la derecha evitamos la temida 
+<FONT COLOR="#ff0000"> recursión infinita</FONT>
 del correspondiente analizador.
 
 <P>
@@ -311,6 +312,7 @@ Un lenguaje generado por una gramática recursiva por la izquierda
 con dos reglas de la forma:
 <BR>
 <BR>
+<DIV ALIGN="CENTER">
 <TABLE CELLPADDING=3>
 <TR><TD ALIGN="LEFT"><!-- MATH
  $A   \rightarrow A \alpha$
@@ -331,6 +333,7 @@ con dos reglas de la forma:
 <TD ALIGN="LEFT"><code>{ gamma_action }</code></TD>
 </TR>
 </TABLE>
+</DIV>
 Es <!-- MATH
  $\gamma \alpha *$
  -->
