--- a/node26.html
+++ b/node26.html
@@ -119,7 +119,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04260000000000000000"></A>
-   <A NAME="4871"></A>
+   <A NAME="4873"></A>
   
 <A NAME="practica:pl0"></A>
 <BR>
@@ -216,7 +216,7 @@ correcta para las diferencias y las divisiones</FONT>.
 <P>
 
 <UL>
-<LI><B>El Problema</B>
+<LI><B>El Problema de la Asociativad a Izquierdas y la Recursión por la Izquierda</B>
 
 <P>
 Supongamos que añadimos el operador <code>-</code> al código de nuestra práctica. 
@@ -334,13 +334,19 @@ con dos reglas de la forma:
 </TR>
 </TABLE>
 </DIV>
-Es <!-- MATH
+Es 
+
+<P>
+<DIV ALIGN="CENTER">
+<!-- MATH
  $\gamma \alpha *$
  -->
 <SPAN CLASS="MATH"><IMG
  WIDTH="35" HEIGHT="31" ALIGN="MIDDLE" BORDER="0"
  SRC="img73.png"
  ALT="$ \gamma \alpha *$"></SPAN>.
+
+</DIV>
 <BR>
 <BR>
 Por tanto el método asociado con <SPAN CLASS="MATH"><IMG
