--- a/node26.html
+++ b/node26.html
@@ -403,6 +403,8 @@ Aquí el token <code>ADDOP</code> esta por las dos operaciones aditivas:
 ser parecido. Tener
 los mismos constructos.
 </LI>
+<LI>Añada al lenguaje la sentencia <code>"if" condition "then" statement "else" statement</code>
+</LI>
 <LI>Use  <A NAME="tex2html201"
   HREF="http://coffeescript.org/">CoffeeScript</A>
  para escribir el código (vea el fichero
