--- a/node26.html
+++ b/node26.html
@@ -119,7 +119,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04260000000000000000"></A>
-   <A NAME="4875"></A>
+   <A NAME="4876"></A>
   
 <A NAME="practica:pl0"></A>
 <BR>
@@ -403,7 +403,8 @@ Aquí el token <code>ADDOP</code> esta por las dos operaciones aditivas:
 ser parecido. Tener
 los mismos constructos.
 </LI>
-<LI>Añada al lenguaje la sentencia <code>"if" condition "then" statement "else" statement</code>
+<LI>
+<FONT COLOR="#0000ff"> Añada al lenguaje la sentencia</FONT> <code>"if" condition "then" statement "else" statement</code>
 </LI>
 <LI>Use  <A NAME="tex2html201"
   HREF="http://coffeescript.org/">CoffeeScript</A>
