--- a/node26.html
+++ b/node26.html
@@ -410,7 +410,7 @@ los mismos constructos.
   HREF="http://coffeescript.org/">CoffeeScript</A>
  para escribir el código (vea el fichero
 <A NAME="tex2html202"
-  HREF="https://github.com/crguezl/prdcalc/blob/master/views/main.coffee">views/main.coffee</A>
+  HREF="https://github.com/crguezl/prdcalc/blob/master/views/main.coffee">views/main.coffee</A>)
 </LI>
 <LI>Use 
 <A NAME="tex2html203"
