--- a/node97.html
+++ b/node97.html
@@ -205,6 +205,17 @@ You should see output similar to the following:
 </PRE>
 
 <P>
+This is called <A NAME="11398"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
+
+<P>
+The idea is simple: most projects
+require a certain amount of so-called 
+<FONT COLOR="#ff0000"> boilerplate</FONT> code, and who
+wants to recreate that code every time you begin a new project? A simple
+way is to create a rough skeleton of a project, and every time you need
+a new project, you just copy this skeleton, or template.
+
+<P>
 
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html2706"
