--- a/node101.html
+++ b/node101.html
@@ -390,6 +390,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DD><A HREF="node9.html#2023">Sintáxis CSS</A>
 <DT><STRONG>S-atribuída</STRONG>
 <DD><A HREF="node62.html#8931">Definición Dirigida por la</A>
+<DT><STRONG>Scaffolding</STRONG>
+<DD><A HREF="node97.html#11398">Getting Started</A>
 <DT><STRONG>selección de código</STRONG>
 <DD><A HREF="node73.html#9916">Selección de Código y</A>
 <DT><STRONG>selector</STRONG>
