--- a/node97.html
+++ b/node97.html
@@ -205,7 +205,7 @@ You should see output similar to the following:
 </PRE>
 
 <P>
-This is called <A NAME="11398"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
+This is called <A NAME="11400"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
 
 <P>
 The idea is simple: most projects
@@ -214,6 +214,24 @@ require a certain amount of so-called
 wants to recreate that code every time you begin a new project? A simple
 way is to create a rough skeleton of a project, and every time you need
 a new project, you just copy this skeleton, or template.
+
+<P>
+<PRE>
+[~/src/coffee]$ express --help
+
+  Usage: express [options] [dir]
+
+  Options:
+
+    -h, --help          output usage information
+    -V, --version       output the version number
+    -e, --ejs           add ejs engine support (defaults to jade)
+        --hbs           add handlebars engine support
+    -H, --hogan         add hogan.js engine support
+    -c, --css &lt;engine&gt;  add stylesheet &lt;engine&gt; support (less|stylus|compass) (defaults to plain css)
+        --git           add .gitignore
+    -f, --force         force on non-empty directory
+</PRE>
 
 <P>
 
