--- a/node97.html
+++ b/node97.html
@@ -216,6 +216,10 @@ way is to create a rough skeleton of a project, and every time you need
 a new project, you just copy this skeleton, or template.
 
 <P>
+Express has taken a page from Ruby on Rails and provided a utility to
+generate scaffolding to start your Express project.
+
+<P>
 <PRE>
 [~/src/coffee]$ express --help
 
