--- a/node97.html
+++ b/node97.html
@@ -205,7 +205,7 @@ You should see output similar to the following:
 </PRE>
 
 <P>
-This is called <A NAME="11402"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
+This is called <A NAME="11404"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
 
 <P>
 The idea is simple: most projects
@@ -240,6 +240,14 @@ Boilerplate is also useful for the actual HTML that will be delivered to the cli
 for example  
 <A NAME="tex2html401"
   HREF="https://html5boilerplate.com/">https://html5boilerplate.com/</A>.
+
+<P>
+Instalamos las dependencias:
+<PRE>
+[~/src/coffee/coffeepress]$ npm install
+npm http GET https://registry.npmjs.org/jade
+....
+</PRE>
 
 <P>
 
