--- a/node89.html
+++ b/node89.html
@@ -80,7 +80,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html2584"
-  HREF="node90.html">PARTE: HERRAMIENTAS</A>
+  HREF="node90.html">SEPTIMA PARTE: APUNTES DE</A>
 <B>Sup:</B> <A NAME="tex2html2578"
   HREF="node78.html">PARTE: CREATE YOUR OWN</A>
 <B> Ant:</B> <A NAME="tex2html2574"
@@ -158,7 +158,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html2584"
-  HREF="node90.html">PARTE: HERRAMIENTAS</A>
+  HREF="node90.html">SEPTIMA PARTE: APUNTES DE</A>
 <B>Sup:</B> <A NAME="tex2html2578"
   HREF="node78.html">PARTE: CREATE YOUR OWN</A>
 <B> Ant:</B> <A NAME="tex2html2574"
