--- a/node96.html
+++ b/node96.html
@@ -82,7 +82,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html2695"
   HREF="node97.html">Getting Started</A>
 <B>Sup:</B> <A NAME="tex2html2689"
-  HREF="node90.html">PARTE: HERRAMIENTAS</A>
+  HREF="node90.html">SEPTIMA PARTE: APUNTES DE</A>
 <B> Ant:</B> <A NAME="tex2html2685"
   HREF="node95.html">Cake</A>
 <B> Con:</B> 
@@ -175,7 +175,7 @@ James carr blog and updated 2015:
 <B> Sig:</B> <A NAME="tex2html2695"
   HREF="node97.html">Getting Started</A>
 <B>Sup:</B> <A NAME="tex2html2689"
-  HREF="node90.html">PARTE: HERRAMIENTAS</A>
+  HREF="node90.html">SEPTIMA PARTE: APUNTES DE</A>
 <B> Ant:</B> <A NAME="tex2html2685"
   HREF="node95.html">Cake</A>
 </DIV>
