--- a/node97.html
+++ b/node97.html
@@ -142,7 +142,7 @@ via npm that we’ll be using throughout the tutorial.
 </LI>
 <LI>mocha. 
 Véase la sección <I>Pruebas: Mocha y Chai</I>
-<A HREF=<tex2html_cr_mark>#:#><tex2html_cr_mark></A>parrafo:mochaychai
+<A HREF="node9.html#parrafo:mochaychai">1.2</A>
 </LI>
 </UL>
 Now let’s bootstrap our project structure. Type 
@@ -205,7 +205,7 @@ You should see output similar to the following:
 </PRE>
 
 <P>
-This is called <A NAME="11404"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
+This is called <A NAME="11402"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
 
 <P>
 The idea is simple: most projects
