--- a/node98.html
+++ b/node98.html
@@ -405,7 +405,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 </UL>
 <BR>
 <LI><A NAME="tex2html2848"
-  HREF="node90.html">PARTE: HERRAMIENTAS</A>
+  HREF="node90.html">SEPTIMA PARTE: APUNTES DE COFFESCRIPT</A>
 <UL>
 <LI><A NAME="tex2html2849"
   HREF="node91.html">CoffeeScript. Introducción</A>
