--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 </UL>
 <BR>
 <LI><A NAME="tex2html543"
-  HREF="node90.html">PARTE: HERRAMIENTAS</A>
+  HREF="node90.html">SEPTIMA PARTE: APUNTES DE COFFESCRIPT</A>
 <UL>
 <LI><A NAME="tex2html544"
   HREF="node91.html">CoffeeScript. Introducción</A>
