--- a/node1.html
+++ b/node1.html
@@ -412,7 +412,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 </UL>
 <BR>
 <LI><A NAME="tex2html697"
-  HREF="node90.html">PARTE: HERRAMIENTAS</A>
+  HREF="node90.html">SEPTIMA PARTE: APUNTES DE COFFESCRIPT</A>
 <UL>
 <LI><A NAME="tex2html698"
   HREF="node91.html">CoffeeScript. Introducción</A>
