--- a/node90.html
+++ b/node90.html
@@ -7,8 +7,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>PARTE: HERRAMIENTAS</TITLE>
-<META NAME="description" CONTENT="PARTE: HERRAMIENTAS">
+<TITLE>SEPTIMA PARTE: APUNTES DE COFFESCRIPT</TITLE>
+<META NAME="description" CONTENT="SEPTIMA PARTE: APUNTES DE COFFESCRIPT">
 <META NAME="keywords" CONTENT="javascriptexamples">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -99,10 +99,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <!--End of Navigation Panel-->
 
 <H1><A NAME="SECTION06000000000000000000">
-PARTE: HERRAMIENTAS</A>
+SEPTIMA PARTE: APUNTES DE COFFESCRIPT</A>
 </H1>
-
-<P>
 <BR> <HR>
 <!--Table of Child-Links-->
 <A NAME="CHILD_LINKS"><STRONG>Subsecciones</STRONG></A>
