--- a/node91.html
+++ b/node91.html
@@ -83,9 +83,9 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html2619"
   HREF="node92.html">Introducción</A>
 <B>Sup:</B> <A NAME="tex2html2613"
-  HREF="node90.html">PARTE: HERRAMIENTAS</A>
+  HREF="node90.html">SEPTIMA PARTE: APUNTES DE</A>
 <B> Ant:</B> <A NAME="tex2html2607"
-  HREF="node90.html">PARTE: HERRAMIENTAS</A>
+  HREF="node90.html">SEPTIMA PARTE: APUNTES DE</A>
 <B> Con:</B> 
 <A NAME="tex2html2614"
   HREF="node98.html">
@@ -187,9 +187,9 @@ CoffeeScript. Introducción
 <B> Sig:</B> <A NAME="tex2html2619"
   HREF="node92.html">Introducción</A>
 <B>Sup:</B> <A NAME="tex2html2613"
-  HREF="node90.html">PARTE: HERRAMIENTAS</A>
+  HREF="node90.html">SEPTIMA PARTE: APUNTES DE</A>
 <B> Ant:</B> <A NAME="tex2html2607"
-  HREF="node90.html">PARTE: HERRAMIENTAS</A>
+  HREF="node90.html">SEPTIMA PARTE: APUNTES DE</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
