--- a/node97.html
+++ b/node97.html
@@ -205,7 +205,7 @@ You should see output similar to the following:
 </PRE>
 
 <P>
-This is called <A NAME="11402"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
+This is called <A NAME="11404"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
 
 <P>
 The idea is simple: most projects
@@ -247,6 +247,11 @@ Instalamos las dependencias:
 [~/src/coffee/coffeepress]$ npm install
 npm http GET https://registry.npmjs.org/jade
 ....
+</PRE>
+y ejecutamos:
+<PRE>
+~/src/coffee/coffeepress]$ DEBUG=coffeepress:* ./bin/www
+  coffeepress:server Listening on port 3000 +0ms
 </PRE>
 
 <P>
