--- a/node98.html
+++ b/node98.html
@@ -177,6 +177,15 @@ Movemos la función verb|normalizePort| antes de la definición de <code>port</c
 GET / 304 298.379 ms - -
 GET /stylesheets/style.css 304 6.048 ms - -
 </PRE>
+Otra forma de ejecutar el servidor es instalar <code>nodemon</code>
+y ejecutarlo así:
+<PRE>
+~/src/coffee/coffeepress(master)]$ nodemon bin/www.coffee
+6 Apr 14:12:01 - [nodemon] v1.3.7
+6 Apr 14:12:01 - [nodemon] to restart at any time, enter `rs`
+6 Apr 14:12:01 - [nodemon] watching: *.*
+6 Apr 14:12:01 - [nodemon] starting `coffee bin/www.coffee`
+</PRE>
 
 <P>
 
