--- a/node98.html
+++ b/node98.html
@@ -171,7 +171,7 @@ TypeError: undefined is not a function
 </PRE>
 
 <P>
-Movemos la función verb|normalizePort| antes de la definición de <code>port</code> y se arregla el asunto.
+Movemos la función <code>normalizePort</code> antes de la definición de <code>port</code> y se arregla el asunto.
 <PRE>
 [~/src/coffee/coffeepress(master)]$ coffee bin/www.coffee 
 GET / 304 298.379 ms - -
