--- a/node98.html
+++ b/node98.html
@@ -258,6 +258,11 @@ que es el que nos permite emitir el mensaje de <code>Listening on</code>:
 debug = require('debug')('coffeepress:server')
   debug 'Listening on ' + bind
 </PRE>
+The <code>DEBUG</code> environment variable is then used to enable these based
+on space or comma-delimited names.
+
+<P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html2734"
   HREF="node99.html">
