--- a/node98.html
+++ b/node98.html
@@ -258,8 +258,8 @@ que es el que nos permite emitir el mensaje de <code>Listening on</code>:
 debug = require('debug')('coffeepress:server')
   debug 'Listening on ' + bind
 </PRE>
-The <code>DEBUG</code> environment variable is then used to enable these based
-on space or comma-delimited names.
+The <code>DEBUG</code> environment variable is then used to enable these 
+<code>debug('...')</code> messages.
 
 <P>
 
