--- a/node97.html
+++ b/node97.html
@@ -206,7 +206,7 @@ You should see output similar to the following:
 </PRE>
 
 <P>
-This is called <A NAME="11457"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
+This is called <A NAME="11461"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
 
 <P>
 The idea is simple: most projects
@@ -219,6 +219,48 @@ a new project, you just copy this skeleton, or template.
 <P>
 Express has taken a page from Ruby on Rails and provided a utility to
 generate scaffolding to start your Express project.
+
+<P>
+The <code>package.json</code> file is automatically populated with 
+
+<UL>
+<LI>the name of the application, 
+</LI>
+<LI>the dependencies, 
+</LI>
+<LI>the private attribute: If you set <code>"private": true</code> in your 
+<code>package.json</code>, then <code>npm</code> will refuse to publish it.  
+This is a way to prevent accidental publication of private repositories.
+</LI>
+<LI>the starting script. 
+</LI>
+</UL>
+<PRE>
+[/tmp/coffeepress]$ cat package.json 
+{
+  "name": "coffeepress",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "body-parser": "~1.10.2",
+    "cookie-parser": "~1.3.3",
+    "debug": "~2.1.1",
+    "express": "~4.11.1",
+    "jade": "~1.9.1",
+    "morgan": "~1.5.1",
+    "serve-favicon": "~2.2.0"
+  }
+</PRE>
+The starting script is named app.js and loads all
+the middleware, assigns the route handlers, and starts the server. There are three folders in the root:
+• public: This folder contains the static assets
+• views: This folder is populated with Jade templates by default
+• routes: This folder includes the routes (these are the equivalent controllers)
+Apart from these existing folders and the models folder, which we need to create ourselves, we might also create folders for tests, logs, or configuration. The best thing about this structure is that
+it's easy to get started with and is known to most developers.
 
 <P>
 <PRE>
