--- a/node97.html
+++ b/node97.html
@@ -206,7 +206,7 @@ You should see output similar to the following:
 </PRE>
 
 <P>
-This is called <A NAME="11461"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
+This is called <A NAME="11465"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
 
 <P>
 The idea is simple: most projects
@@ -254,11 +254,19 @@ This is a way to prevent accidental publication of private repositories.
     "serve-favicon": "~2.2.0"
   }
 </PRE>
-The starting script is named app.js and loads all
-the middleware, assigns the route handlers, and starts the server. There are three folders in the root:
-• public: This folder contains the static assets
-• views: This folder is populated with Jade templates by default
-• routes: This folder includes the routes (these are the equivalent controllers)
+The starting script is <code>bin/www</code> and loads <code>app.js</code> 
+<PRE>
+</PRE>
+<code>app.js</code> loads the middleware, assigns the route handlers, and starts the server. There are three folders in the root:
+
+<UL>
+<LI>public: This folder contains the static assets
+</LI>
+<LI>views: This folder is populated with Jade templates by default
+</LI>
+<LI>routes: This folder includes the routes (these are the equivalent controllers)
+</LI>
+</UL>
 Apart from these existing folders and the models folder, which we need to create ourselves, we might also create folders for tests, logs, or configuration. The best thing about this structure is that
 it's easy to get started with and is known to most developers.
 
